--- a/Front-end/telas_login/src/App.css
+++ b/Front-end/telas_login/src/App.css
@@ -2,9 +2,47 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Roboto Slab';
   }
   
+  form{
+    padding: 0px;
+    margin: 0px auto;
+    display: flex;
+  }
+
+  .titulo {
+    font-size: 14px;
+    margin-bottom: 15px;
+    align-self: center;
+  }
+
+  .campo {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+    margin-right: 20px;
+    font-size: 15px;
+  }
+
+  .campo label {
+    margin-bottom: 5px;
+    font-size: 15px;
+    font-weight: 500;
+    color:#555555;
+  }
+
+  .campo input {
+    border: 2px solid #AAAAAA;
+    border-radius: 4px;
+    background: #fff;
+    height: 36px;
+    padding: 0 10px;
+    width: 250px;
+    align-self: center;
+    margin-bottom: 10px;
+  }
+
   .fundo_pagina {
     background-image: url('./images/fundo2.png');
     background-position: center;
@@ -22,43 +60,16 @@
     border-color: rgb(172, 172, 172);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    height: 300px;
+    width: 350px;
     padding: 30px;
-  
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    border-top: 5px solid cornflowerblue;
     }
-  
-  .formulario {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 15px;
-    margin-right: 20px;
-    font-size: 15px;
-  }
   
   .formulario2 {
     display: flex;
     flex-direction: row;
     font-size: 15px;
-  }
-    
-  
-  .formulario label{
-    margin-bottom: 5px;
-    font-size: 14px;
-    font-weight: 500;
-    color:#555555;
-  }
-  
-  .formulario input{
-    border: 2px solid #AAAAAA;
-    border-radius: 4px;
-    background: #fff;
-    height: 36px;
-    padding: 0 10px;
-    width: 250px;
   }
   
   .formulario3 input{
@@ -71,7 +82,7 @@
     width: 40px;
   }
   
-  .formulario button{
+  form button{
     background-color: #125ec0; 
     border: none;
     color: white;
@@ -81,4 +92,14 @@
     display: inline-block;
     font-size: 16px;
     width: 250px;
+    margin-right: 20px;
+  }
+  
+  form button:hover{
+    background-color: #176fe2;
+    cursor: pointer;
+  }
+
+  ErrorMessage{
+    color: red;
   }
