--- a/Front-end/mercadocell/src/components/User/Login/Login.css
+++ b/Front-end/mercadocell/src/components/User/Login/Login.css
@@ -24,13 +24,13 @@ form {
 
 .login-painel {
   background-color: #ffffff;
-  border-radius: 10px;
+  border-left: 4px solid #0003b1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 20px;
-  width: 300px;
+  width: 400px;
   height: 300px; 
 }
 
@@ -109,12 +109,12 @@ form {
   font-size: 18px;
   margin-top: 5px;
   border: none;
-
+  margin-left: 20px;
   outline-width: 0;
 }
 
 .login-painel button:hover {
-  background-color: #0b8b14;
+  background-color: #1f56bb;
   color: #EFF2F5;
   cursor: pointer;
 }
