--- a/Front-end/mercadocell/src/pages/Cadastro/cadastro_produto.css
+++ b/Front-end/mercadocell/src/pages/Cadastro/cadastro_produto.css
@@ -14,7 +14,7 @@
   }
 
 .produto_form{
-  height: 500px;
+  height: 600px;
   width: 700px;
   border-top: 5px solid cornflowerblue;
   border-radius: 0px;;
@@ -31,6 +31,14 @@
   flex-direction: row;
   font-size: 15px;
   margin-bottom: 20px;
+}
+
+.produto_linha3{
+  display: flex;
+  flex-direction: row;
+  font-size: 15px;
+  margin-bottom: 20px;
+  margin-right: 260px;
 }
   
 .produto_campo{
@@ -53,6 +61,21 @@
   padding: 0 10px;
   height: 36px;
   width: 500px;
+}
+
+.anexarimagem {
+  background-color: #125ec0; 
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  width: 250px;
+  margin-right: 20px;
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
 
 .produto_campo select {
