--- a/Front-end/mercadocell/src/pages/Cadastro/cadastro_produto.css
+++ b/Front-end/mercadocell/src/pages/Cadastro/cadastro_produto.css
@@ -14,10 +14,12 @@
   }
 
 .produto_form{
+  margin-top: 100px;
   height: 600px;
   width: 700px;
   border-top: 5px solid cornflowerblue;
-  border-radius: 0px;;
+  border-radius: 0px;
+  margin-top: 75px;
 }
 
 .produto_titulo{
