--- a/Front-end/mercadocell/src/components/User/Login/Login.css
+++ b/Front-end/mercadocell/src/components/User/Login/Login.css
@@ -4,11 +4,8 @@
   justify-content: center;
   height: 100vh;
   width: 100%;
-
-  background-color: #527ee4;
-  background-color: #7d9eec;
-  background-color: #dadada;
-
+  background-image: url('../../../images/fundo.png');
+  background-position: center;
 }
 
 form {
@@ -24,7 +21,8 @@ form {
 
 .login-painel {
   background-color: #ffffff;
-  border-left: 4px solid #0003b1;
+  border: 0.5px solid #125ec0;
+  border-left: 6px solid #125ec0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -36,7 +34,7 @@ form {
 
 .login-painel h1 {
   font-family: 'Roboto Slab';
-  color: #527ee4;
+  color: #125ec0;
   font-size: 40px;
   margin-bottom: 20px;
 }
@@ -101,7 +99,7 @@ form {
 
 .login-painel button {
   width: 100%;
-  background-color: #0003b1;
+  background-color: #125ec0;
   color: #EFF2F5;
   font-weight: 800;
   height: 50px;
@@ -114,7 +112,7 @@ form {
 }
 
 .login-painel button:hover {
-  background-color: #1f56bb;
+  background-color:#1888ff;
   color: #EFF2F5;
   cursor: pointer;
 }
