--- a/Front-end/mercadocell/src/pages/Movimentacao/movimentacao_venda.css
+++ b/Front-end/mercadocell/src/pages/Movimentacao/movimentacao_venda.css
@@ -13,49 +13,74 @@
   
     }
   
-  .usuario_form{
+  .compra_form{
+    margin-top: 100px;
     height: 500px;
-    width: 400px;
+    width: 700px;
     border-top: 5px solid cornflowerblue;
     border-radius: 0px;
     margin-top: 75px;
   }
   
-  .usuario_titulo{
+  .compra_titulo{
     font-size: 14px;
     margin-top: 15px;
     margin-bottom: 30px;
   }
   
-  .usuario_linha{
+  .compra_linha{
     display: flex;
     flex-direction: row;
     font-size: 15px;
     margin-bottom: 20px;
   }
+  
+  .compra_linha3{
+    display: flex;
+    flex-direction: row;
+    font-size: 15px;
+    margin-bottom: 20px;
+    margin-right: 260px;
+  }
     
-  .usuario_campo{
+  .compra_campo{
     display: flex;
     flex-direction: column;
     font-size: 15px;
+    margin-inline: 10px;
   }
     
-  .usuario_campo label {
+  .compra_campo label {
     margin-bottom: 5px;
     font-size: 15px;
     color:#555555;
   }
     
-  .usuario_campo input {
+  .compra_campo input {
     border: 2px solid #AAAAAA;
     border-radius: 4px;
     background: #fff;
     padding: 0 10px;
     height: 36px;
-    width: 250px;
+    width: 500px;
   }
   
-  .usuario_campo select {
+  .anexarimagem {
+    background-color: #125ec0; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    width: 250px;
+    margin-right: 20px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+  }
+  
+  .compra_campo select {
     border: 2px solid #AAAAAA;
     border-radius: 4px;
     background: #fff;
@@ -63,15 +88,27 @@
     height: 36px;
     width: 240px;
   }
+
+  .compra_campo2{
+    display: flex;
+    flex-direction: column;
+    font-size: 15px;
+    margin-inline: 10px;
+  }
+    
+  .compra_campo2 label {
+    margin-bottom: 5px;
+    font-size: 15px;
+    color:#555555;
+  }
   
-  .usuario_campo textarea {
+  .compra_campo2 input {
     border: 2px solid #AAAAAA;
     border-radius: 4px;
     background: #fff;
     padding: 0 10px;
-    resize: none;
-    height: 72px;
-    width: 500px;
+    height: 36px;
+    width: 240px;
   }
   
   form button{
@@ -84,8 +121,9 @@
     display: inline-block;
     font-size: 16px;
     width: 250px;
+    margin-right: 20px;
     margin-bottom: 0px;
-    margin-left: 17px;
+    margin-top: 0px;
   }
   
   form button:hover{
