--- a/Front-end/mercadocell/src/pages/Cadastro/cadastro_usuario.css
+++ b/Front-end/mercadocell/src/pages/Cadastro/cadastro_usuario.css
@@ -14,8 +14,8 @@
     }
   
   .usuario_form{
-    height: 500px;
-    width: 400px;
+    height: 400px;
+    width: 700px;
     border-top: 5px solid cornflowerblue;
     border-radius: 0px;
     margin-top: 75px;
@@ -73,6 +73,55 @@
     height: 72px;
     width: 500px;
   }
+
+
+
+
+
+
+
+
+
+  .usuario_campo2{
+    display: flex;
+    flex-direction: column;
+    font-size: 15px;
+    margin-inline: 10px;
+  }
+    
+  .usuario_campo2 label {
+    margin-bottom: 5px;
+    font-size: 15px;
+    color:#555555;
+  }
+  
+  .usuario_campo2 input {
+    border: 2px solid #AAAAAA;
+    border-radius: 4px;
+    background: #fff;
+    padding: 0 10px;
+    height: 36px;
+    width: 240px;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   
   form button{
     background-color: #125ec0; 
