--- a/Front-end/mercadocell/src/pages/Movimentacao/movimentacao_compra.css
+++ b/Front-end/mercadocell/src/pages/Movimentacao/movimentacao_compra.css
@@ -14,18 +14,17 @@
     }
   
   .compra_form{
-    margin-top: 100px;
-    height: 500px;
+    height: 600px;
     width: 700px;
     border-top: 5px solid cornflowerblue;
     border-radius: 0px;
-    margin-top: 75px;
+    margin-top: 50px;
   }
   
   .compra_titulo{
     font-size: 14px;
     margin-top: 15px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
   }
   
   .compra_linha{
@@ -64,6 +63,58 @@
     height: 36px;
     width: 500px;
   }
+
+
+
+
+
+
+
+  .compra_campo2{
+    display: flex;
+    flex-direction: column;
+    font-size: 15px;
+  }
+    
+  .compra_campo2 label {
+    margin-bottom: 5px;
+    font-size: 15px;
+    color:#555555;
+  }
+    
+  .compra_campo2 select {
+    border: 2px solid #AAAAAA;
+    border-radius: 4px;
+    background: #fff;
+    padding: 0 10px;
+    height: 36px;
+    width: 240px;
+    margin-right: 260px;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   
   .anexarimagem {
     background-color: #125ec0; 
