--- a/Front-end/mercadocell/src/pages/Movimentacao/movimentacao_pagamento.css
+++ b/Front-end/mercadocell/src/pages/Movimentacao/movimentacao_pagamento.css
@@ -13,42 +13,50 @@
   
     }
   
-  .pessoajuridica_form{
-    margin-top: 200px;
-    height: 450px;
+  .pagamento_form{
+    margin-top: 100px;
+    height: 500px;
     width: 700px;
     border-top: 5px solid cornflowerblue;
     border-radius: 0px;
     margin-top: 75px;
   }
   
-  .pessoajuridica_titulo{
+  .pagamento_titulo{
     font-size: 14px;
     margin-top: 15px;
     margin-bottom: 30px;
   }
   
-  .pessoajuridica_linha{
+  .pagamento_linha{
     display: flex;
     flex-direction: row;
     font-size: 15px;
     margin-bottom: 20px;
   }
+  
+  .pagamento_linha3{
+    display: flex;
+    flex-direction: row;
+    font-size: 15px;
+    margin-bottom: 20px;
+    margin-right: 260px;
+  }
     
-  .pessoajuridica_campo{
+  .pagamento_campo{
     display: flex;
     flex-direction: column;
     font-size: 15px;
     margin-inline: 10px;
   }
     
-  .pessoajuridica_campo label {
+  .pagamento_campo label {
     margin-bottom: 5px;
     font-size: 15px;
     color:#555555;
   }
     
-  .pessoajuridica_campo input {
+  .pagamento_campo select {
     border: 2px solid #AAAAAA;
     border-radius: 4px;
     background: #fff;
@@ -57,71 +65,13 @@
     width: 500px;
   }
   
-  .anexarimagem {
-    background-color: #125ec0; 
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    width: 250px;
-    margin-right: 20px;
-    margin-bottom: 0px;
-    margin-top: 0px;
-  }
-  
-  .pessoajuridica_campo select {
+  .pagamento_campo input {
     border: 2px solid #AAAAAA;
     border-radius: 4px;
     background: #fff;
     padding: 0 10px;
     height: 36px;
     width: 240px;
-  }
-  
-  .pessoajuridica_campo textarea {
-    border: 2px solid #AAAAAA;
-    border-radius: 4px;
-    background: #fff;
-    padding: 0 10px;
-    resize: none;
-    height: 72px;
-    width: 500px;
-  }
-
-  .pessoajuridica_linha3{
-    display: flex;
-    flex-direction: row;
-    font-size: 15px;
-    margin-bottom: 20px;
-    margin-right: 250px;
-  }
-  
-  .pessoajuridica_linha3 input{
-    display: flex;
-    flex-direction: row;
-    font-size: 15px;
-    width: 250px;
-  }
-
-.radio{
-    margin-right: 400px;;
-}
-
-.radio input {
-    background: #fff;
-    padding: 0 10px;
-    resize: none;
-    height: 15px;
-    width: 15px;
-  }
-
-.radio label {
-    margin-bottom: 10px;
-    font-size: 15px;
-    color:#555555;
   }
   
   form button{
